# Triply-AI-A-Multi-Agent-Travel-Planner-with-LangGraph

./: .dockerignore  DockerFile  Dockerfile  README.md  app.py  backend.py  demo.excalidraw  pyproject.toml  requirements.txt  test.py
static/: script.js  style.css
templates/: index.html
tools/: flight_tool.py  tavily_tool.py
