[project]
name = "ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "airportsdata==20260315",
    "duckduckgo-search>=8.1.1",
    "exa-py>=2.16.0",
    "fastapi==0.136.3",
    "ipykernel>=7.3.0",
    "jinja2==3.1.6",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.5",
    "langchain-groq",
    "langchain-tavily>=0.2.18",
    "langgraph-checkpoint-postgres==3.1.0",
    "psycopg-pool==3.3.1",
    "psycopg[binary]==3.3.4",
    "pycountry==26.2.16",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tavily-python>=0.7.26",
    "uvicorn==0.48.0",
]
